# Mass-video-compressor

./: .gitattributes  .gitignore  LICENSE  README.md  build.py  main.py  pyproject.toml  requirements.in  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: presets.py  settings.py
core/: hardware.py  processor.py
tests/: test_build.py  test_hardware.py  test_presets.py  test_processor.py
tools/: pre_ci.py  update_readme.py
